fixing index overflow and truncate and adding form descriptions

--- a/app/assets/stylesheets/report.scss
+++ b/app/assets/stylesheets/report.scss
@@ -5,7 +5,7 @@
   width: 304px;
   height: 0;
   max-height: calc(100% - 300px);
-  overflow: auto;
+  overflow-x: hidden;
   z-index: 2;
   position: fixed;
   top: 82px;
